# financial_health_manager

./: .gitignore  AGENTS.md  CREDENTIALS.md  DEPLOYMENT_RUNBOOK.md  Dockerfile  README.md  TECH_STACK.md  app.py  docker-compose.yml  pocketbase_collections.json  pyproject.toml  pytest.ini  run.sh  server.py  setup_complete_database.py
.github/workflows/: ci.yml
backend/: Dockerfile  README_DEPLOY.md  app.py  pyproject.toml  requirements.txt  server.py  setup_pocketbase.py
backend/fhm/: __init__.py  core.py  models.py  pb_client.py
backend/tests/: test_analysis.py  test_app.py  test_mcp_server.py  test_server_pocketbase.py
fhm/: __init__.py  core.py  models.py
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/ai/: FinancialChatbot.tsx
frontend/src/components/auth/: ForgotPasswordForm.tsx  LoginForm.tsx  ProtectedRoute.tsx  RegisterForm.tsx  index.ts
frontend/src/components/charts/: MonthlyTimeSeriesChart.tsx  SavingsRateChart.tsx  YearOverYearChart.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: index.ts  useFinancialData.ts  usePocketBaseRealtime.ts  useRequireAuth.ts
frontend/src/services/: aiAnalysis.ts  api.ts  auth.ts
frontend/src/types/: auth.ts  financial.ts
frontend/src/utils/: financial.ts
pocketbase/pb_migrations/: 1754205599_created_transactions.js  1754205910_created_uploads.js  1754291512_updated_transactions.js
tests/: test_analysis.py  test_app.py  test_mcp_server.py  test_server.py
(+12 files in other folders)
